--- a/ex-2/assets/index.html
+++ b/ex-2/assets/index.html
@@ -5,9 +5,110 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Языковая школа</title>
+    <title>Экспоцентр</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./images/logo-header.png" alt="Логотип" id="logo-header">
+        <nav class="nav-header">
+            <ul>
+                <li>О комплексе</li>
+                <li>О компании</li>
+                <li>Новости</li>
+                <li>Медиа-банк</li>
+                <li>Контакты</li>
+            </ul>
+        </nav>
+        <nav class="nav-header">
+            <ul>
+                <li><img src="./images/search.svg" alt="Поиск"></li>
+                <li><img src="./images/globe.svg" alt="Язык"> English</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <div id="head">
+                <h1>Экспофорум</h1>
+                <p>конгрессно-выставочный центр Санкт-Петербурга</p>
+                <a href="#">О комплексе <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></a>
+            </div>
+            <div id="blocks">
+                <div id="block-1">
+                    <h2>Календарь мероприятий</h2>
+                    <p>Подробнее <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></p>
+                </div>
+                <div id="block-2">
+                    <h2>Как добраться до Экспофорума</h2>
+                    <p>Подробнее <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></p>
+                </div>
+                <div id="block-3">
+                    <h2>Онлайн-заявка на организацию мероприятия</h2>
+                    <p>Подробнее <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></p>
+                </div>
+            </div>
+        </article>
+        <aside>
+            <div>
+                <h3>Новости</h3>
+                <div><a href="#">Все новости</a> <img src="./images/arrow-black.svg" alt="Стрелка"></div>
+            </div>
+            <div class="news">
+                <img src="./images/image-1.png" alt="Изображение">
+                <p class="date">4 января 2020 г.</p>
+                <p class="news-text">Как объединилась реальность и виртуальность - LIKEE PARTY</p>
+            </div>
+            <div class="news">
+                <img src="./images/image-2.png" alt="Изображение">
+                <p class="date">2 января 2020 г.</p>
+                <p class="news-text">Как объединилась реальность и виртуальность - LIKEE PARTY</p>
+            </div>
+            <div class="news">
+                <img src="./images/image-3.png" alt="Изображение">
+                <p class="date">2 января 2020 г.</p>
+                <p class="news-text">Как объединилась реальность и виртуальность - LIKEE PARTY</p>
+            </div>
+        </aside>
+    </main>
+    <footer>
+        <div class="footer-menu">
+            <h3>Организаторам</h3>
+            <ul>
+                <li>Документы организаторам</li>
+                <li>Услуги организаторам</li>
+                <li>Выставочные площади</li>
+                <li>Рестораны и кафе</li>
+                <li>Конгресс-центр</li>
+                <li>Спорт-центр</li>
+            </ul>
+        </div>
+        <div class="footer-menu">
+            <h3>Экспонентам</h3>
+            <ul>
+                <li>Общие условия участия</li>
+                <li>Услуги экспонентам</li>
+                <li>Документы экспонентам</li>
+                <li>Центр деловых контактов</li>
+                <li>Забронировать гостиницу</li>
+            </ul>
+        </div>
+        <div class="footer-menu">
+            <h3>Посетителям</h3>
+            <ul>
+                <li>Сервисы</li>
+                <li>Онлайн-регистрация на мероприятие </li>
+                <li>Забронировать гостиницу</li>
+                <li>Центр деловых контактов</li>
+            </ul>
+        </div>
+        <div class="footer-menu">
+            <h3>Прессе</h3>
+            <ul>
+                <li>Аккредитация</li>
+                <li>Пресс-служба</li>
+                <li>Правила аккредитации</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
