--- a/ex-2/assets/index.html
+++ b/ex-2/assets/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <header>
-        <img src="./images/logo-header.png" alt="Логотип" id="logo-header">
+        <a href="#"><img src="./images/logo.svg" alt="Логотип" id="logo-header"></a>
         <nav class="nav-header">
             <ul>
-                <li>О комплексе</li>
-                <li>О компании</li>
-                <li>Новости</li>
-                <li>Медиа-банк</li>
-                <li>Контакты</li>
+                <li><a href="#">О комплексе</a></li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Медиа-банк</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
         <nav class="nav-header">
             <ul>
-                <li><img src="./images/search.svg" alt="Поиск"></li>
-                <li><img src="./images/globe.svg" alt="Язык"> English</li>
+                <li><a href="#"><img src="./images/search.svg" alt="Поиск"></a></li>
+                <li><a href="#"><img src="./images/globe.svg" alt="Язык"> &nbsp English</a></li>
             </ul>
         </nav>
     </header>
@@ -30,43 +30,55 @@
         <article>
             <div id="head">
                 <h1>Экспофорум</h1>
-                <p>конгрессно-выставочный центр Санкт-Петербурга</p>
-                <a href="#">О комплексе <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></a>
+                <p>конгрессно-выставочный центр <br /> Санкт-Петербурга</p>
+                <a href="#">О комплексе &nbsp; <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></a>
             </div>
             <div id="blocks">
-                <div id="block-1">
-                    <h2>Календарь мероприятий</h2>
-                    <p>Подробнее <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></p>
-                </div>
-                <div id="block-2">
-                    <h2>Как добраться до Экспофорума</h2>
-                    <p>Подробнее <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></p>
-                </div>
-                <div id="block-3">
-                    <h2>Онлайн-заявка на организацию мероприятия</h2>
-                    <p>Подробнее <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></p>
-                </div>
+                        <div id="block-1">
+                            <a href="#">
+                                <h2>Календарь мероприятий</h2>
+                                <p>Подробнее &nbsp; <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></p>
+                            </a>
+                        </div> 
+                        <div id="block-2">
+                            <a href="#">
+                                <h2>Как добраться до Экспофорума</h2>
+                                <p>Подробнее &nbsp; <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></p>
+                            </a>
+                        </div>
+                        <div id="block-3">
+                            <a href="#">
+                                <h2>Онлайн-заявка на организацию мероприятия</h2>
+                                <p>Подробнее &nbsp; <img src="./images/arrow.svg" alt="Стрелка" class="arrow"></p>
+                            </a> 
+                        </div>
             </div>
         </article>
         <aside>
-            <div>
+            <div id="news-head">
                 <h3>Новости</h3>
                 <div><a href="#">Все новости</a> <img src="./images/arrow-black.svg" alt="Стрелка"></div>
             </div>
             <div class="news">
                 <img src="./images/image-1.png" alt="Изображение">
-                <p class="date">4 января 2020 г.</p>
-                <p class="news-text">Как объединилась реальность и виртуальность - LIKEE PARTY</p>
+                <div class="news-content">
+                    <p class="date">4 января 2020 г.</p>
+                    <p class="news-text"><a href="#">Как объединилась реальность и виртуальность - LIKEE PARTY</a></p>
+                </div>
             </div>
             <div class="news">
                 <img src="./images/image-2.png" alt="Изображение">
-                <p class="date">2 января 2020 г.</p>
-                <p class="news-text">Как объединилась реальность и виртуальность - LIKEE PARTY</p>
+                <div class="news-content">
+                    <p class="date">2 января 2020 г.</p>
+                    <p class="news-text"><a href="#">Как объединилась реальность и виртуальность - LIKEE PARTY</a></p>
+                </div>
             </div>
             <div class="news">
                 <img src="./images/image-3.png" alt="Изображение">
-                <p class="date">2 января 2020 г.</p>
-                <p class="news-text">Как объединилась реальность и виртуальность - LIKEE PARTY</p>
+                <div class="news-content">
+                    <p class="date">1 января 2020 г.</p>
+                    <p class="news-text"><a href="#">Как объединилась реальность и виртуальность - LIKEE PARTY</a></p>
+                </div>
             </div>
         </aside>
     </main>
@@ -74,39 +86,39 @@
         <div class="footer-menu">
             <h3>Организаторам</h3>
             <ul>
-                <li>Документы организаторам</li>
-                <li>Услуги организаторам</li>
-                <li>Выставочные площади</li>
-                <li>Рестораны и кафе</li>
-                <li>Конгресс-центр</li>
-                <li>Спорт-центр</li>
+                <li><a href="#">Документы организаторам</a></li>
+                <li><a href="#">Услуги организаторам</a></li>
+                <li><a href="#">Выставочные площади</a></li>
+                <li><a href="#">Рестораны и кафе</a></li>
+                <li><a href="#">Конгресс-центр</a></li>
+                <li><a href="#">Спорт-центр</a></li>
             </ul>
         </div>
         <div class="footer-menu">
             <h3>Экспонентам</h3>
             <ul>
-                <li>Общие условия участия</li>
-                <li>Услуги экспонентам</li>
-                <li>Документы экспонентам</li>
-                <li>Центр деловых контактов</li>
-                <li>Забронировать гостиницу</li>
+                <li><a href="#">Общие условия участия</a></li>
+                <li><a href="#">Услуги экспонентам</a></li>
+                <li><a href="#">Документы экспонентам</a></li>
+                <li><a href="#">Центр деловых контактов</a></li>
+                <li><a href="#">Забронировать гостиницу</a></li>
             </ul>
         </div>
         <div class="footer-menu">
             <h3>Посетителям</h3>
             <ul>
-                <li>Сервисы</li>
-                <li>Онлайн-регистрация на мероприятие </li>
-                <li>Забронировать гостиницу</li>
-                <li>Центр деловых контактов</li>
+                <li><a href="#">Сервисы</a></li>
+                <li><a href="#">Онлайн-регистрация на мероприятие</a></li>
+                <li><a href="#">Забронировать гостиницу</a></li>
+                <li><a href="#">Центр деловых контактов</a></li>
             </ul>
         </div>
         <div class="footer-menu">
             <h3>Прессе</h3>
             <ul>
-                <li>Аккредитация</li>
-                <li>Пресс-служба</li>
-                <li>Правила аккредитации</li>
+                <li><a href="#">Аккредитация</a></li>
+                <li><a href="#">Пресс-служба</a></li>
+                <li><a href="#">Правила аккредитации</a></li>
             </ul>
         </div>
     </footer>
