--- a/ex-2/assets/index.html
+++ b/ex-2/assets/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <title>Экспоцентр</title>
+    <link rel="hortcut icon" href="./images/logo-icon.svg" type="image/svg" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <title>Экспофорум</title>
 </head>
 <body>
     <header>
