--- a/ex-3/assets/index.html
+++ b/ex-3/assets/index.html
@@ -25,7 +25,13 @@
         </div>
     </header>
     <main>
-        <article id="first-screen">
+        <div id="first-screen">
+            <div id="first-screen-text">
+                <h1>Grow your <br /> way with <br /> Mailchimp & Co</h1>
+                <p class="text">Are you a freelancer or agency helping small businesses succeed? Join Mailchimp & Co to learn new skills, build your reputation, and get tools to help you manage your clients. It’s free and easy to get started.</p>
+                <button class="btn" id="btn-red">Join Mailchimp & Co</button>
+                <p class="explanation">(Whether you're new or have a free or paid Mailchimp account)</p>
+            </div>
             <nav id="first-screen-nav">
                 <ul>
                     <li><a href="#">Overview</a></li>
@@ -35,16 +41,10 @@
                     <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
-            <div id="first-screen-text">
-                <h1>Grow your way with Mailchimp & Co</h1>
-                <p>Are you a freelancer or agency helping small businesses succeed? Join Mailchimp & Co to learn new skills, build your reputation, and get tools to help you manage your clients. It’s free and easy to get started.</p>
-                <button class="btn" id="btn-red">Join Mailchimp & Co</button>
-                <p class="explanation">(Whether you're new or have a free or paid Mailchimp account)</p>
-            </div>
-        </article>
+        </div>
         <article id="benefits">
-            <h2>Membership has its benefits</h2>
-            <p>You help your clients build their business with Mailchimp. So we designed a community to help you grow yours, in your own unique way.</p>
+            <h2 class="h2">Membership has its benefits</h2>
+            <p class="center-text">You help your clients build their business with Mailchimp. So we designed a community to help you grow yours, in your own unique way.</p>
             <section id="benefits-spec">
                 <div class="benefit">
                     <img src="./images/icon-1.svg" alt="icon">
@@ -77,8 +77,8 @@
             </div>
         </div>
         <article id="partnership">
-            <h2>Your guided path to partnership</h2>
-            <p>Once you’re in, you’re part of a collective of Mailchimp insiders—from budding freelancers to seasoned agencies. You’ll get tools to help you do your thing, earn more for your work, and unlock more benefits along the way.</p>
+            <h2 class="h2-normal">Your guided path to partnership</h2>
+            <p class="center-text-normal">Once you’re in, you’re part of a collective of Mailchimp insiders—from budding freelancers to seasoned agencies. You’ll get tools to help you do your thing, earn more for your work, and unlock more benefits along the way.</p>
         </article>
         <div id="start">
             <div class="start-steps">
@@ -86,11 +86,11 @@
                     <h3>Your journey starts here</h3>
                     <p>As a member, you'll get all that comes with a free Mailchimp account plus great perks for doing what you do best.</p>
                     <ul>
-                        <li>Access to exclusive training</li>
-                        <li>Tools for managing multiple clients</li>
-                        <li>Rewards for helping people with Mailchimp</li>
+                        <li>&nbsp;&nbsp;Access to exclusive training</li>
+                        <li>&nbsp;&nbsp;Tools for managing multiple clients</li>
+                        <li>&nbsp;&nbsp;Rewards for helping people with Mailchimp</li>
                     </ul>
-                    <a href="#">See more benefits</a>
+                    <a href="#"><br />See more benefits</a>
                 </div>
                 <img src="./images/image-2.png" alt="image-2">
             </div>
@@ -100,11 +100,11 @@
                     <h3>Make your way to partner</h3>
                     <p>Once you've become a partner, you're officially recognized as a Mailchimp professional, which comes with added features and benefits.</p>
                     <ul>
-                        <li>Get more leads with a listing in our partner directory</li>
-                        <li>24/7 priority support so you can help clients faster</li>
-                        <li>Official partner page and co-marketing materials</li>
+                        <li>&nbsp;&nbsp;Get more leads with a listing in our partner directory</li>
+                        <li>&nbsp;&nbsp;24/7 priority support so you can help clients faster</li>
+                        <li>&nbsp;&nbsp;Official partner page and co-marketing materials</li>
                     </ul>
-                    <a href="#">See more benefits</a>
+                    <a href="#"><br />See more benefits</a>
                 </div>
                 <img src="./images/image-3.png" alt="image-2">
             </div>
@@ -114,22 +114,22 @@
                     <h3>Go pro, get pro benefits</h3>
                     <p>When you become a Mailchimp pro partner, you join the ranks of our most trusted and valued experts.</p>
                     <ul>
-                        <li>More exposure in our partner directory</li>
-                        <li>Even more rewards for helping your clients</li>
-                        <li>Rewards for helping people with Mailchimp</li>
+                        <li>&nbsp;&nbsp;More exposure in our partner directory</li>
+                        <li>&nbsp;&nbsp;Even more rewards for helping your clients</li>
+                        <li>&nbsp;&nbsp;Rewards for helping people with Mailchimp</li>
                     </ul>
-                    <a href="#">Access to our partner managers</a>
+                    <a href="#"><br />See more benefits</a>
                 </div>
                 <img src="./images/image-4.png" alt="image-2">
             </div>
         </div>
         <article id="account">
-            <h2>Already have a Mailchimp account?</h2>
-            <p>Good news! If you’re a freelancer or agency, you can enjoy these benefits for no additional cost as soon as you join Mailchimp & Co. You won't lose any existing data and you can revert back at any time.</p>
-            <button class="btn" classs="transparent">Join Mailchimp & Co</button>
+            <h2 class="h2">Already have a Mailchimp account?</h2>
+            <p class="center-text">Good news! If you’re a freelancer or agency, you can enjoy these benefits for no additional cost as soon as you join Mailchimp & Co. You won't lose any existing data and you can revert back at any time.</p>
+            <button class="btn transparent">Join Mailchimp & Co</button>
         </article>
         <article id="community">
-            <h2>Get inspiration from your community</h2>
+            <h2 class="h2-normal">Get inspiration from your community</h2>
             <div id="publishes">
                 <div class="publish">
                     <img src="./images/image-5.png" alt="image-5">
@@ -138,13 +138,13 @@
                     <p>Because of founder Brett Farmiloe’s auditing background, it’s in his agency Markitors' DNA to analyze every piece of information and formulate a story using that data. Here are his tips for a good email audit.</p>
                 </div>
                 <div class="publish">
-                    <img src="./images/image-5.png" alt="image-5">
+                    <img src="./images/image-6.png" alt="image-6">
                     <h4>Business Tips</h4>
                     <h3>Practicing Self-Care as a Freelancer</h3>
                     <p>Easy ways for freelancers to infuse self-care into their daily lives</p>
                 </div>
                 <div class="publish">
-                    <img src="./images/image-5.png" alt="image-5">
+                    <img src="./images/image-7.png" alt="image-7">
                     <h4>Business Tips</h4>
                     <h3>Dissecting Really Good Email with Lucky Red Pixel</h3>
                     <p>Email is important, but sometimes it’s low on a company’s to-do list, which can cultivate a lot of issues. Florida-based agency Lucky Red Pixel walks us through what it takes to compose a good one—and how to fix common mistakes.</p>
@@ -163,9 +163,9 @@
         </div>
         <article id="start-2">
             <h2>Yes, you’re in the right place</h2>
-            <p>Start your guided path to partnership today.</p>
-            <button class="btn" id="yellow">Join Mailchimp & Co</button>
-            <p class="explanation">(Whether you're new or have a Mailchimp account)</p>
+            <p id="start-2-text">Start your guided path to partnership today.</p>
+            <button class="btn transparent" id="yellow">Join Mailchimp & Co</button>
+            <p class="explanation" id="yellow-text">(Whether you're new or have a Mailchimp account)</p>
         </article>
     </main>
     <footer>
@@ -247,7 +247,7 @@
             </div>
             <div id="copyright">
                 <button class="btn" id="footer-btn">Read this page in</button>
-                <p>©2001-2021 All Rights Reserved. Mailchimp® is a registered trademark of The Rocket Science Group. Apple and the Apple logo are trademarks of Apple Inc., registered in the U.S. and other countries. Mac App Store is a service mark of Apple Inc. Google Play and the Google Play logo are trademarks of Google Inc.</p>
+                <p id="footer-text">©2001-2021 All Rights Reserved. Mailchimp® is a registered trademark of The Rocket Science Group. Apple and the Apple logo are trademarks of Apple Inc., registered in the U.S. and other countries. Mac App Store is a service mark of Apple Inc. Google Play and the Google Play logo are trademarks of Google Inc.</p>
                 <p>Privacy & Terms</p>
             </div>
         </div>
