--- a/ex-2/assets/index.html
+++ b/ex-2/assets/index.html
@@ -23,7 +23,7 @@
         <nav class="nav-header">
             <ul>
                 <li><a href="#"><img src="./images/search.svg" alt="Поиск"></a></li>
-                <li><a href="#"><img src="./images/globe.svg" alt="Язык"> &nbsp English</a></li>
+                <li><a href="#"><img src="./images/globe.svg" alt="Язык"> &nbsp; English</a></li>
             </ul>
         </nav>
     </header>
