--- a/ex-3/assets/index.html
+++ b/ex-3/assets/index.html
@@ -154,11 +154,11 @@
         <div id="questions">
             <div class="question">
                 <h3>Ready to explore the benefits?</h3>
-                <button class="btn" class="transparent">See benefits</button>
+                <button class="btn transparent">See benefits</button>
             </div>
             <div class="question">
                 <h3>Looking for freelancer tools?</h3>
-                <button class="btn" class="transparent">See tools</button>
+                <button class="btn transparent">See tools</button>
             </div>
         </div>
         <article id="start-2">
