--- a/ex-2/assets/index.html
+++ b/ex-2/assets/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="hortcut icon" href="./images/logo-icon.svg" type="image/svg" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Экспофорум</title>
 </head>
