--- a/ex-2/assets/index.html
+++ b/ex-2/assets/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Grid Layout</title>
 </head>
@@ -15,20 +16,20 @@
             <h2>
                 [Основная часть]
             </h2>
-            <article class="more-grid">
-                <section class="more more1"><p>[Ещё 1]</p></section>
-                <section class="more more2"><p>[Ещё 2]</p></section>
-                <section class="more more3"><p>[Ещё 3]</p></section>
-            </article>
+            <div class="more-grid">
+                <div class="more more1"><p>[Ещё 1]</p></div>
+                <div class="more more2"><p>[Ещё 2]</p></div>
+                <div class="more more3"><p>[Ещё 3]</p></div>
+            </div>
     </main>
     <aside class="aside">
             <h2>[Бововая область]</h2>
     </aside>
     <footer class="footer footer-grid">
-        <section class="sec-foot sec-foot1"><p>[Секция футера 1]</p></section>
-        <section class="sec-foot sec-foot2"><p>[Секция футера 2]</p></section>
-        <section class="sec-foot sec-foot3"><p>[Секция футера 3]</p></section>
-        <section class="sec-foot sec-foot4"><p>[Секция футера 4]</p></section>
+        <div class="sec-foot sec-foot1"><p>[Секция футера 1]</p></div>
+        <div class="sec-foot sec-foot2"><p>[Секция футера 2]</p></div>
+        <div class="sec-foot sec-foot3"><p>[Секция футера 3]</p></div>
+        <div class="sec-foot sec-foot4"><p>[Секция футера 4]</p></div>
     </footer>
 </body>
 </html>
