--- a/ex-3/assets/index.html
+++ b/ex-3/assets/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>MOVEE</title>
 </head>
@@ -71,5 +72,33 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="first-column">
+            <h2>MOVEE</h2>
+            <p><a href="#">Политика конфиденциальности</a></p>
+            <p><a href="#">Соглашение на обработку персональных данных</a></p>
+        </div>
+        <div class="second-column">
+            <ul>
+                <li><a href="#"></a>Главная</li>
+                <li><a href="#"></a>Цена</li>
+                <li><a href="#"></a>Автопарк</li>
+                <li><a href="#"></a>Отзывы</li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </div>
+        <div class="third-column">
+            <a href="#"><img src="./images/youtube.svg#" alt="YouTube"></a>
+            <a href="#"><img src="./images/vk.svg" alt="VK"></a>
+            <a href="#"><img src="./images/fb.svg" alt="Facebook"></a>
+            <a href="#"><img src="./images/insta.svg" alt="Instagram"></a> <br />
+            <a href="#" class="email">hello@movee.ru</a>
+        </div> 
+        <div class="fourth-column">
+            <button>Обратный звонок</button> <br />
+            <p class="phone-footer"><a href="#">
+                8 (800)-080-12-13</a></p>
+        </div>
+    </footer>
 </body>
 </html>
