--- a/ex-2/assets/index.html
+++ b/ex-2/assets/index.html
@@ -30,21 +30,22 @@
             </div>
             <div class="advantages">
                 <div class="advantages1">
-                    <img src="./images/truck.svg" alt="truck">
+                    <div><img src="./images/truck.svg" alt="truck"></div>
                     <p>Более 800 <br /> переездов</p>
                 </div>
                 <div class="advantages2">
-                    <img src="./images/triggerTwo.svg" alt="triggerTwo">
+                    <div><img src="./images/triggerTwo.svg" alt="triggerTwo"></div>
                     <p>Бережная <br /> упаковка</p>
                 </div>
                 <div class="advantages3">
-                    <img src="./images/money.svg" alt="triggerTwo">
+                    <div><img src="./images/money.svg" alt="triggerTwo"></div>
                     <p>Фиксированная <br /> цена</p>
                 </div>
             </div>
         </div>
-        <div class="man">
-            <img src="./images/man.png" alt="man">
+        <div class="carman">
+            <div class="man"><img  src="./images/man.png" alt="man"></div>
+            <div class="car"><img src="./images/car.png" alt="car"></div>
         </div>
     </header>
     <main>
@@ -88,16 +89,19 @@
             </ul>
         </div>
         <div class="third-column">
-            <a href="#"><img src="./images/youtube.svg#" alt="YouTube"></a>
-            <a href="#"><img src="./images/vk.svg" alt="VK"></a>
-            <a href="#"><img src="./images/fb.svg" alt="Facebook"></a>
-            <a href="#"><img src="./images/insta.svg" alt="Instagram"></a> <br />
+            <div class="icon">
+                <div class="Youtube"><a href="#"><img src="./images/youtube.svg#" alt="YouTube"></a></div>
+                <div class="VK"><a href="#"><img src="./images/vk.svg" alt="VK"></a></div>
+                <div class="Facebook"><a href="#"><img src="./images/fb.svg" alt="Facebook"></a></div>
+                <div class="Instagram"><a href="#"><img src="./images/insta.svg" alt="Instagram"></a></div>
+            </div>
+            
             <a href="#" class="email">hello@movee.ru</a>
         </div> 
         <div class="fourth-column">
             <button>Обратный звонок</button> <br />
-            <p class="phone-footer"><a href="#">
-                8 (800)-080-12-13</a></p>
+            <span class="phone-footer"><a href="#">
+                8 (800)-080-12-13</a></span>
         </div>
     </footer>
 </body>
