Первое практическое задание недели

--- a/ex1/index.html
+++ b/ex1/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <title>Document</title>
+    <title>EX1</title>
 </head>
 <body>
+    <main>
+        <div class="btn" onclick="onClick()">
+            <button class="btn_click">Click on me</button>
+        </div>
+    </main>
     
     <script src="./assets/scripts/index.js"></script>
 </body>
