Второе задание недели

--- a/ex2/index.html
+++ b/ex2/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/styles/normalize.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <title>Document</title>
+    <title>EX2</title>
 </head>
 <body>
+    <main>
+        <div class="calculate">
+            <div class="btn" onclick="add()">
+                <div class="btn_img">
+                    <img class="btn_svg" src="./assets/images/plus.svg" alt="plus" >
+                </div>
+            </div>
+            <div class="btn" onclick="sub()">
+                <div class="btn_img">
+                    <img class="btn_svg" src="./assets/images/minus.svg" alt="plus" >
+                </div>
+            </div>
+            <div class="btn" onclick="multi()">
+                <div class="btn_img">
+                    <img class="btn_svg" src="./assets/images/multiplication.svg" alt="plus" >
+                </div>
+            </div>
+            <div class="btn" onclick="division()">
+                <div class="btn_img">
+                    <img class="btn_svg" src="./assets/images/division.svg" alt="plus" >
+                </div>
+            </div>
+        </div>
+    </main>
     
     <script src="./assets/scripts/index.js"></script>
 </body>
